Fix Collections API usage